# http_server_final

./: .gitignore  README.md  capture_server  capture_server.cpp  capture_server.hpp
.aid/: aid.http_server_final.prot.priv.txt
.cache/clangd/index/: alternating_case.cpp.74B82F106FE271BC.idx  alternating_case.cpp.C1FD74D6E6065DE0.idx  ascii_art.cpp.48CBD5E9967FCE13.idx  ascii_art.cpp.6A45C82998293D3D.idx  char_pyramid.cpp.ACEC42A6E9CBE236.idx  char_pyramid.cpp.B8D8A4C07F59A773.idx  diamond_chars.cpp.7F9BE1F40C778A08.idx  diamond_chars.cpp.A50F270F258AD59E.idx  print_arg.cpp.2D1BD6F09049C687.idx  print_arg.cpp.ADEF9A6872DE9072.idx  repeating_chars.cpp.6D09D3686C58F57D.idx  repeating_chars.cpp.B870050BBE05A010.idx  reverse_string.cpp.769826222A9F8A95.idx  reverse_string.cpp.F28EF95F35AC5A9F.idx  (+4 more)
Executables/: X  alternating_case  ascii_art  diamond  echo  pyramid  repeating  reverse  rotating
binary_analysis/: dsym_dump.txt  otool_dump.txt
serving_files/: browse_files.php  buffer_results.csv  chat.txt  code_view.php  directory.php  index._php  index.html  index.php  ratio_r.txt  ratio_results.txt  ratio_rr.csv  results.txt
serving_files/classwork/: basic_file_server.cpp  basic_threaded_server.cpp  basic_ws_server.cpp  find_best_buffer.cpp  spawn_child.cpp
serving_files/example_execubles/: CMakeLists.txt  a.out  alternating_case.cpp  ascii_art.cpp  char_pyramid.cpp  diamond_chars.cpp  print_arg.cpp  repeating_chars.cpp  reverse_string.cpp  rotating.cpp  spiral.cpp  wavy.cpp
serving_files/pomao/: xomeo.html  xomeo.js  xomeo.wasm
serving_files/style/: main.css
(+6 files in other folders)
